Reconfigure gradle project to typical settings

--- a/build.gradle
+++ b/build.gradle
@@ -13,10 +13,10 @@ dependencies {
 sourceSets {
     main {
         java {
-            srcDirs = ['src/SuperAutoSolver']
+            srcDirs = ['src/main/java']
         }
         resources {
-            srcDirs = ['src/resources']
+            srcDirs = ['src/main/resources']
         }
     }
 }
